Use https rather than http for the project webpage.

--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_el.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_el.html
@@ -22,6 +22,6 @@
     <p style="color:red; font-size: 20px">Εάν αντιμετωπίζετε προβλήματα με το άνοιγμα των προηγούμενων συνδέσμων, αντιγράψτε και επικολλήστε την ακόλουθη διεύθυνση url σε ένα πρόγραμμα περιήγησης:</p>
     <p style="color:red; font-size: 20px">{{ survey_link }}</p>
     <p>Η έρευνα είναι μέρος μιας μελέτης που αναπτύχθηκε από τους Mosquito Alert, CEAB-CSIC και UPF.</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="https://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
