--- a/tigahelp/templates/tigahelp/about_us_bg.html
+++ b/tigahelp/templates/tigahelp/about_us_bg.html
@@ -25,7 +25,7 @@ About Us
     (включително испанския <em> План Estal </em>, линията за финансиране на ЕС „Хоризонт 2020“ и проекти на фондация „la
     Caixa“). Mosquito Alert също разчита на приноса на ресурси от водещите и сътрудничещите организации.</p> <p>Повече
     информация за участниците, сътрудничеството и проектите можете да намерите на <a
-            href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> и в социалните мрежи.</p>
+            href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> и в социалните мрежи.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
