--- a/tigahelp/templates/tigahelp/about_us_de.html
+++ b/tigahelp/templates/tigahelp/about_us_de.html
@@ -24,7 +24,7 @@
     wissenschaftlicher Kommunikation (einschließlich des spanischen <em> Plan Estal </em>, der
         EU-Finanzierungslinie "Horizont 2020" und der Projekte der "la Caixa" -Stiftung ua). Mosquito Alert stützt sich
         auch auf Beiträge von Ressourcen der führenden und kooperierenden Unternehmen.</p> <p>Weitere Informationen
-    zu Unternehmen, Kooperationen und Projekten finden Sie unter <a href="http://www.mosquitoalert.com/en/">
+    zu Unternehmen, Kooperationen und Projekten finden Sie unter <a href="https://www.mosquitoalert.com/en/">
         www.mosquitoalert.com </a> und in sozialen Netzwerken.</p>
 
 <p class="centeredImage">
