--- a/tigahelp/templates/tigahelp/about_us_gl.html
+++ b/tigahelp/templates/tigahelp/about_us_gl.html
@@ -19,7 +19,7 @@ Sobre Nosotros
 <h2>Financiamento e participación en proxectos</h2>
 <p>Mosquito Alert participa en proxectos competitivos de investigación, comunicación científica e divulgación (Plan Nacional estatal, Horizonte 2020 da Unión Europea, Fundación "a Caixa", entre outros), e finánciase tamén coa achega de recursos das entidades que lideran o proxecto e entidades colaboradoras.</p>
 
-<p>Máis información sobre entidades, colaboracións e proxectos en  <a href="http://www.mosquitoalert.com/">www.mosquitoalert.com</a> e redes sociais.</p>
+<p>Máis información sobre entidades, colaboracións e proxectos en  <a href="https://www.mosquitoalert.com/">www.mosquitoalert.com</a> e redes sociais.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
