--- a/tigahelp/templates/tigahelp/about_us_hr.html
+++ b/tigahelp/templates/tigahelp/about_us_hr.html
@@ -23,7 +23,7 @@ About Us
 <p>Mosquito Alert sudjeluje u konkurentnim istraživačkim i znanstvenim komunikacijskim projektima (uključujući Državni
     nacionalni plan, EU horizon 2020 liniju financiranja i "la Caixa" fondaciju projekata, između ostalih), a financira
     se i doprinosom resursa subjekata koji vode projekt i subjekata koji surađuju.</p>
-<p>Više informacija o subjektima, suradnji i projektima možete naći na <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
+<p>Više informacija o subjektima, suradnji i projektima možete naći na <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
     i na društvenim mrežama.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
