--- a/tigahelp/templates/tigahelp/about_us_hu.html
+++ b/tigahelp/templates/tigahelp/about_us_hu.html
@@ -23,7 +23,7 @@ Rólunk
     terjesztése érdekében (beleértve a Spanish <em>Plan Estal</em>, az EU’s Horizon 2020 támogatási vonalat, és a “la
     Caixa” Foundation projects, többek közt). A Mosquito Alert további vezető és együttműködő szervezetek forrásainak
     hozzájárulására is támaszkodik.</p> <p>A szervezetekkel, együttműködésekkel és projektekkel kapcsolatos további
-    információk a következő webhelyen találhatók: <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
+    információk a következő webhelyen találhatók: <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
     és a közösségi hálózatokon.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
