--- a/tigahelp/templates/tigahelp/about_us_lb.html
+++ b/tigahelp/templates/tigahelp/about_us_lb.html
@@ -25,7 +25,7 @@ Iwwert eis
     wissenschaftlicher Kommunikation (einschließlich des spanischen <em> Plan Estal &lt;/em&gt;, der
         EU-Finanzierungslinie „Horizont 2020“ und der Projekte der „la Caixa“ -Stiftung ua). Mosquito Alert stützt sich
         auch auf Beiträge von Ressourcen der führenden und kooperierenden Unternehmen.</em></p> <p>Weitere Informationen
-    zu Unternehmen, Kooperationen und Projekten finden Sie unter <a href="http://www.mosquitoalert.com/en/">
+    zu Unternehmen, Kooperationen und Projekten finden Sie unter <a href="https://www.mosquitoalert.com/en/">
         www.mosquitoalert.com </a> und in sozialen Netzwerken.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
