--- a/tigahelp/templates/tigahelp/about_us_mk.html
+++ b/tigahelp/templates/tigahelp/about_us_mk.html
@@ -23,7 +23,7 @@ About Us
     фондациски проекти, и многу други). Предупредување за комарец исто така се потпира на придонесите од водењето и
     соработката помеѓу субјектите.</p>
 <p>Повеќе информации за ентитетите, соработниците и проектот може да најдете на <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>, како и на социјалните мрежи.</p>
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>, како и на социјалните мрежи.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
