--- a/tigahelp/templates/tigahelp/about_us_nl.html
+++ b/tigahelp/templates/tigahelp/about_us_nl.html
@@ -25,7 +25,7 @@ About Us
     en “la Caixa” Foundation projecten). Mosquito Alert kan ook rekenen op de bijdrage van middelen door de leidende en
     deelnemende entiteiten.</p>
 <p>Meer informatie over deze entiteiten, samenwerkingen en projecten kan gevonden worden op <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> en sociale netwerken.</p>
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> en sociale netwerken.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
