--- a/tigahelp/templates/tigahelp/about_us_pt.html
+++ b/tigahelp/templates/tigahelp/about_us_pt.html
@@ -24,7 +24,7 @@ About Us
 <p>A Mosquito Alert participa em projetos competitivos de investigação, comunicação científica e divulgação (Plano
     Nacional de Estado, Horizonte 2020 da União Europeia, Fundação "la Caixa", entre outros), sendo também um projeto
     financiado com o aporte de recursos das entidades que dirigem o projeto e entidades colaboradoras.</p>
-<p>Mais informações sobre entidades, colaborações e projetos em <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
+<p>Mais informações sobre entidades, colaborações e projetos em <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
     e nas redes sociais.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
