--- a/tigahelp/templates/tigahelp/about_us_sl.html
+++ b/tigahelp/templates/tigahelp/about_us_sl.html
@@ -22,7 +22,7 @@ O Nas
     sodeluje pri konkurenčnih projektih za raziskave, razširjanje znanstvenih sporočil (med drugim španski <em> Plan
         Estal</em>, linija EU za financiranje Obzorja 2020 in fundacije "la Caixa"). Mosquito Alert se opira tudi na
     prispevke vodilnih in sodelujočih oseb.</p> <p>Več informacij o entitetah, sodelovanjih in projektih najdete na <a
-        href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a> in na družabnih omrežjih.</p>
+        href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a> in na družabnih omrežjih.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
