--- a/tigahelp/templates/tigahelp/about_us_sr.html
+++ b/tigahelp/templates/tigahelp/about_us_sr.html
@@ -23,7 +23,7 @@ About Us
     Fondaciju projekata, između ostalih). Alarm za komarce se takođe zasiva na doprinosu izvora vodećih i kolarativnih
     entiteta. </p>
 <p>Više informacija o entitetima, saradnji i projektima možete naći na <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> i na društvenim mrežama. </p>
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> i na društvenim mrežama. </p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
