--- a/tigahelp/templates/tigahelp/about_us_sv.html
+++ b/tigahelp/templates/tigahelp/about_us_sv.html
@@ -25,7 +25,7 @@ About Us
         med flera). Mosquito Alert förlitar sig också på bidrag av resurser från de ledande och samarbetande
         organisationerna.</p>
     <p>Mer information om organisationer, samarbeten och projekt finns på <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> och på sociala nätverk.</p>
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> och på sociala nätverk.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
