--- a/tigahelp/templates/tigahelp/about_us_tr.html
+++ b/tigahelp/templates/tigahelp/about_us_tr.html
@@ -27,7 +27,7 @@ About Us
     bulunmaktadır). Mosquito Alert aynı zamanda önde gelen ve bizimle işbirliği yapan kuruluşlardan gelen kaynaklarla da
     desteklenmektedir.</p>
 
-<p>Kurumlar, işbirlikleri ve projeler hakkında daha fazla bilgi <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
+<p>Kurumlar, işbirlikleri ve projeler hakkında daha fazla bilgi <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
     adresinde ve sosyal ağlarda bulunabilir.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
