--- a/tigahelp/templates/tigahelp/help_en.html
+++ b/tigahelp/templates/tigahelp/help_en.html
@@ -13,7 +13,7 @@ Fight against mosquito-borne diseases. If you see a tiger mosquito (<i>Aedes alb
 
 
 <h2>Learn how to identify them</h2>
-We teach you how to easily differentiate them from other mosquitoes in our website <a href="http://mosquitoalert.com">mosquitoalert.com</a>. You can also see different tips to make good photos.
+We teach you how to easily differentiate them from other mosquitoes in our website <a href="https://mosquitoalert.com">mosquitoalert.com</a>. You can also see different tips to make good photos.
 
 <h2>Send your reports</h2>
 Use the “REPORT” buttons to send reports on breeding sites in public places and sightings of adult tiger and yellow fever mosquitoes. You'll find detailed information by clicking the (i) icons.
@@ -25,16 +25,16 @@ If you want to edit or remove any report, use the “MY MAP” button and select
 You will receive special missions in your device throughout the season. You will be able to do the mission, keep it undone or remove it if you don’t want to do it. Pending missions will be shown in the main menu.
 
 <h2>Explore other options</h2>
-In each screen you can access additional features using the options menu. For example, in “MY MAP” you can choose the type the map, share the app from the main screen or see the latest news from <a href="http://mosquitoalert.com">Mosquito Alert</a>.
+In each screen you can access additional features using the options menu. For example, in “MY MAP” you can choose the type the map, share the app from the main screen or see the latest news from <a href="https://mosquitoalert.com">Mosquito Alert</a>.
 
 <h1>WHERE IS YOUR SENT DATA</h1>
-The reports you submit using the app, with or without photos, go to the Mosquito Alert server and they appear automatically in the map of <a href="http://mosquitoalert.com">mosquitoalert.com</a>. This information is very useful to know the distribution of the tiger mosquito and the yellow fever mosquito. It can be shared with thirds parties or the public.
+The reports you submit using the app, with or without photos, go to the Mosquito Alert server and they appear automatically in the map of <a href="https://mosquitoalert.com">mosquitoalert.com</a>. This information is very useful to know the distribution of the tiger mosquito and the yellow fever mosquito. It can be shared with thirds parties or the public.
 
 The Mosquito Alert app also collects coarse information on your location at random times throughout the day in order to generate a map of the areas being monitored by Mosquito Alert users, and to learn about the routes along which tiger and yellow fever mosquitoes may be spreading. These locations are masked by rounding your actual location to the nearest 0.025 degrees latitude and longitude, making it possible to know that you were in an area roughly the size of a small city like Blanes, but impossible to know where you were in that area.
 
 The locations are linked only to your randomly-generated user ID, and no personally-identifying information is collected
 
 <h1>DO YOU WANT MORE INFORMATION?</h1>
-Check our website <a href="http://mosquitoalert.com">mosquitoalert.com</a> or send us an email at <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>
+Check our website <a href="https://mosquitoalert.com">mosquitoalert.com</a> or send us an email at <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>
 
 {% endblock %}
