--- a/tigahelp/templates/tigahelp/help_es.html
+++ b/tigahelp/templates/tigahelp/help_es.html
@@ -13,7 +13,7 @@ Lucha contra los mosquitos que transmiten enfermedades. Si ves un mosquito tigre
 
 
 <h2>Aprende a identificar estos mosquitos</h2>
-Te enseñamos a distinguirlos de otros mosquitos de una forma muy sencilla en nuestra página web <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Consulta nuestros trucos para hacer buenas fotos.
+Te enseñamos a distinguirlos de otros mosquitos de una forma muy sencilla en nuestra página web <a href="https://mosquitoalert.com">mosquitoalert.com</a>. Consulta nuestros trucos para hacer buenas fotos.
 
 <h2>Envía tus hallazgos</h2>
 Utiliza los botones “ENVÍA” para enviar informes de lugares de cría en espacios públicos e informes de mosquito tigre o de mosquito de la fiebre amarilla. Encontrarás más información en el icono (i).
@@ -25,16 +25,16 @@ Si quieres editar o eliminar algún informe, entra en “MI MAPA” y selección
 A lo largo de la temporada recibirás misiones especiales en tu móvil. En cualquier momento podrás realizar la misión, dejarla para más tarde o eliminarla si no quieres hacerla. Podrás ver la misiones pendientes en el menú principal.
 
 <h2>Explora otras opciones</h2>
-En cada pantalla podrás acceder a más opciones con el botón de configuración. Por ejemplo, en “MI MAPA” puedes cambiar el tipo de mapa, puedes compartir la app desde la pantalla principal o bien consultar las últimas noticias de la plataforma  <a href="http://mosquitoalert.com">Mosquito Alert</a>.
+En cada pantalla podrás acceder a más opciones con el botón de configuración. Por ejemplo, en “MI MAPA” puedes cambiar el tipo de mapa, puedes compartir la app desde la pantalla principal o bien consultar las últimas noticias de la plataforma  <a href="https://mosquitoalert.com">Mosquito Alert</a>.
 
 <h1>¿DÓNDE VAN LOS DATOS QUE ENVÍAS?</h1>
-Los avisos que envíes a través de la app, con o sin foto, se envían al servidor de Mosquito Alert y aparecerán de forma automática en el mapa de la plataforma <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Esta información es muy útil para conocer la distribución del mosquito tigre y del mosquito de la fiebre amarilla. Puede ser compartida con terceros o con el público general.
+Los avisos que envíes a través de la app, con o sin foto, se envían al servidor de Mosquito Alert y aparecerán de forma automática en el mapa de la plataforma <a href="https://mosquitoalert.com">mosquitoalert.com</a>. Esta información es muy útil para conocer la distribución del mosquito tigre y del mosquito de la fiebre amarilla. Puede ser compartida con terceros o con el público general.
 
 La app Mosquito Alert también recoge datos de la posición aproximada de tu dispositivo en intervalos de tiempo aleatorios. Esta información se utiliza para conocer y generar un mapa de las zonas exploradas por los usuarios de Mosquito Alert y para saber más sobre las vías de dispersión de estos mosquitos. Los datos de posición son aproximados y se recogen redondeando tu posición real a los 0.025 grados de latitud y longitud más cercanos. Con este método se puede saber tu ubicación dentro de una área del tamaño de una ciudad pequeña, pero en ningún caso se sabe tu posición exacta dentro de esta área.
 
 Las localizaciones están unidas sólo a tu identificador, generado de manera aleatoria, pero a ninguna información que permita tu identificación personal.
 
 <h1>¿QUIERES MÁS INFORMACIÓN?</h1>
-Visita nuestra página web <a href="http://mosquitoalert.com">mosquitoalert.com</a> o escríbenos en <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>
+Visita nuestra página web <a href="https://mosquitoalert.com">mosquitoalert.com</a> o escríbenos en <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>
 
 {% endblock %}
