--- a/tigahelp/templates/tigahelp/license_bg.html
+++ b/tigahelp/templates/tigahelp/license_bg.html
@@ -20,7 +20,7 @@ Mosquito Alert Лиценз
     екологични изследвания и приложения в горското стопанство (CREAF), Университет Помпеу Фабра (UPF) и Каталунски
     институт за изследвания и разширени проучвания (ICREA).</p>
 <p>Изходният код на приложението Mosquito Alert е достъпен на уебсайта на проекта на адрес
-    <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
+    <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
 <p>Автори (в азбучен ред): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan
     Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boix,
     Isis Sanpera, Alex Tarragó, Marina Torres.</p>
