--- a/tigahelp/templates/tigahelp/license_ca.html
+++ b/tigahelp/templates/tigahelp/license_ca.html
@@ -19,7 +19,7 @@ Mosquito Alert License
     (CEAB-CSIC), el Centre de Recerca Ecològica i Aplicacions Forestals (CREAF), la Universitat Pompeu Fabra (UPF) i
     l'Institut Català de Recerca i Estudis Avançats (ICREA). </p> <p> El codi font de l'aplicació Mosquito Alert està
     disponible en el lloc web del projecte en <a
-            href="http://www.mosquitoalert.com/ca/">http://www.mosquitoalert.com</a>. </p> <p> Autors (per ordre
+            href="https://www.mosquitoalert.com/ca/">https://www.mosquitoalert.com</a>. </p> <p> Autors (per ordre
     alfabètic): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga,
     Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John RB Palmer, Ariadna Peña, Alex Richter-Boix, Isis
     Sanpera, Alex Tarragó, Marina Torres. </p> <p> En col·laboració amb la comunitat AIM COST(<a
