--- a/tigahelp/templates/tigahelp/license_de.html
+++ b/tigahelp/templates/tigahelp/license_de.html
@@ -18,7 +18,7 @@ Mosquito Alert Lizenz
 <p>Die Mosquito Alert App wurde von folgenden Institutionen entwickelt: dem Spanish National Research Council’s Blanes
     Center for Advanced Studies (CEAB-CSIC), dem Center for Ecological Research and Forest Applications (CREAF), Pompeu
     Fabra University (UPF) und dem Catalan Institute for Research and Advanced Studies (ICREA).</p>
-<p>Der Quellcode für die Mosquito Alert-App ist auf der Projektwebsite unter <a href="http://www.mosquitoalert.com/en/">
+<p>Der Quellcode für die Mosquito Alert-App ist auf der Projektwebsite unter <a href="https://www.mosquitoalert.com/en/">
     www.mosquitoalert.com </a> verfügbar.</p>
 <p>Autoren (in alphabetischer Reihenfolge): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí
     Escobar, Joan Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex
