--- a/tigahelp/templates/tigahelp/license_el.html
+++ b/tigahelp/templates/tigahelp/license_el.html
@@ -19,7 +19,7 @@
     Forestals), UPF (Universitat Pompeu Fabra) ICREA (Institución Catalana de Investigación y Estudios Avanzados) and
     CEAB-CSIC (Centro de Estudios Avanzados de Blanes).</p>
 <p>Ο κώδικας για την εφαρμογή Mosquito Alert είναι διαθέσιμος στον ιστότοπο του έργου στη διεύθυνση <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
 <p>Συγγραφείς (με αλφαβητική σειρά): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí
     Escobar, Joan Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex
     Richter-Boix, Isis Sanpera, Alex Tarragó, Marina Torres.</p>
