--- a/tigahelp/templates/tigahelp/license_es.html
+++ b/tigahelp/templates/tigahelp/license_es.html
@@ -20,7 +20,7 @@ Mosquito Alert License
     Investigaciones Científicas (CEAB-CSIC), el Centro de Investigación Ecológica y Aplicaciones Forestales (CREAF), la
     Universidad Pompeu Fabra (UPF) y la Institución Catalana de Investigación y Estudios Avanzados (ICREA). </p> <p> El
     código fuente de Mosquito Alert está disponible en la página web del proyecto, en <a
-            href="http://www.mosquitoalert.com">www.mosquitoalert.com</a>. </p> <p> Autores (en orden alfabético):
+            href="https://www.mosquitoalert.com">www.mosquitoalert.com</a>. </p> <p> Autores (en orden alfabético):
     Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia
     Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Àlex Richter-Boix, Isis Sanpera, Alex
     Tarragó, Marina Torres. </p> <p> En colaboración con la comunidad AIM COST (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>)
