--- a/tigahelp/templates/tigahelp/license_hr.html
+++ b/tigahelp/templates/tigahelp/license_hr.html
@@ -18,7 +18,7 @@ Mosquito Alert License
     institucije: Centar za napredne studije Blanes (CEAB - CSIC), Centar za ekološka istraživanja i primjene u šumarstvu
     (CREAF), Pompeu Fabra fakultet (UPF) i Katalonski institut za istraživanja i napredne studije (ICREA).</p> <p>
     Izvorni kod aplikacije Mosquito Alert dostupan je na internet stranici projekta <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com.</a></p> <p>Autori (poredani po abecedi): Frederic
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com.</a></p> <p>Autori (poredani po abecedi): Frederic
     Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agusti Escobar, Joan Garriga, Misericordia Girones,
     Zivko Juznic - Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Pena, Alex Richter-Boix, Isis Sanpera, Alex Tarrago,
     Marina Torres.</p> <p>U suradnji s AIM COST zajednicom (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) i Global Mosquito Alert
