--- a/tigahelp/templates/tigahelp/license_hu.html
+++ b/tigahelp/templates/tigahelp/license_hu.html
@@ -18,7 +18,7 @@ Mosquito Alert Licenc
     Spanish National Research Council’s Blanes Center for Advanced Studies (CEAB-CSIC), a Center for Ecological Research
     and Forest Applications (CREAF), Pompeu Fabra University (UPF) és a Catalan Institute for Research and Advanced
     Studies (ICREA). </p> <p> A Mosquito Alert app forrás módja a projekt weboldalán elérhető <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>. </p> <p> Szerzők (abc sorrendben): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boix, Isis Sanpera, Alex Tarragó, Marina Torres. </p> <p> Az AIM COST közösséggel kollaborációban (<a href="
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>. </p> <p> Szerzők (abc sorrendben): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boix, Isis Sanpera, Alex Tarragó, Marina Torres. </p> <p> Az AIM COST közösséggel kollaborációban (<a href="
         https://www.aedescost.eu/">https://www.aedescost.eu/</a>) és a Global Mosquito Alerttel (<a
         href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>). </p> <p> Az app Szúnyog
     útmutatójában szereplő szúnyog képeket Roger Eritja készítette, minden jog fenntartva. </p> <p> A szúnyogokról
