--- a/tigahelp/templates/tigahelp/license_it.html
+++ b/tigahelp/templates/tigahelp/license_it.html
@@ -19,7 +19,7 @@ Licenza Mosquito Alert
     degli Studi Avanzati di Blanes del Consiglio Superiore di Investigaziones Cientificas (CEAB-CSIC), il Centro di
     Investigazione Ecologica y Applizoni Forestali (CREAF), la Universita Pompeu Fabra (UPF) e la Instituzione Catalana
     d'Investigazione e Studi Avanzati (ICREA). </p> <p> Il codice sorgente di Mosquito Alert è disponibile sul sito web
-    del progetto, all'indirizzo <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>. </p> <p> Autori
+    del progetto, all'indirizzo <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>. </p> <p> Autori
     (in ordine alfabetico): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan
     Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Àlex Richter-Boix,
     Isis Sanpera, Alex Tarragó, Marina Torres. </p> <p> In collaborazione con la comunità AIM COST (<a
