--- a/tigahelp/templates/tigahelp/license_lb.html
+++ b/tigahelp/templates/tigahelp/license_lb.html
@@ -18,7 +18,7 @@ Mosquito Alert Lizenz
     entwéckelt: Centro de Estudios Avanzados de Blanes del Consejo Superior de Investigaciones Científicas (CEAB-CSIC),
     el Centro de Investigación Ecológica y Aplicaciones Forestales (CREAF), la Universidad Pompeu Fabra (UPF) y la
     Institución Catalana de Investigación y Estudios Avanzados (ICREA).</p> <p>De Quellcode vun der Mosquito-Alert-App
-    ass verfügbar op der Websäit vum Projet op <a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com.</a>
+    ass verfügbar op der Websäit vum Projet op <a href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com.</a>
 </p> <p>Auteuren (an alphabetescher Reiefolleg): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin,
     Agustí Escobar, Joan Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John RB Palmer, Ariadna Peña,
     Alex Richter-Boix, Is San , Alex Tarragó, Marina Torres.</p> <p>An Zesummenaarbecht mat der AIM-COST-Gemeinschaft
