--- a/tigahelp/templates/tigahelp/license_mk.html
+++ b/tigahelp/templates/tigahelp/license_mk.html
@@ -20,7 +20,7 @@
     Бланес за напредни студии (CEAB-CSIC), Центар за еколошки истражувања и примена во шумарството (CREAF), Универзитет
     Помпеу Фабра (UPF) и Каталонски Институт за истражување и напредни студии (ICREA).</p>
 <p>Изворниот код за апликацијата Предупредување за комарец е достапна на веб-страната на проектот <a
-        href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a>.</p>
+        href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a>.</p>
 <p>Автори (по азбучен ред): Фредерик Бартумеус, Берј Декрамањиан, Роџер Еритја, Санти Ескартин, Агусти Ескобар, Јоан
     Гарига, Мисерикордиа Диронес, Живко Јузниќ-Зонта, Аитана Олтра, Џон Р.Б.Палмер, Ариадна Пења, Алекс Рихтер-Боикс,
     Исис Санпера, Алекс Тараго, Марина Торес.</p>
