--- a/tigahelp/templates/tigahelp/license_nl.html
+++ b/tigahelp/templates/tigahelp/license_nl.html
@@ -18,7 +18,7 @@ Mosquito Alert Licentie
     applicatie is ontwikkeld door de volgende instituten: the Spanish National Research Council’s Blanes Center for
     Advanced Studies (CEAB-CSIC), the Center for Ecological Research and Forest Applications (CREAF), Pompeu Fabra
     University (UPF) en Catalan Institute for Research and Advanced Studies (ICREA).</p> <p>De broncode van de Mosquito
-    Alert applicatie is beschikbaar op de Mosquito Alert website: <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.
+    Alert applicatie is beschikbaar op de Mosquito Alert website: <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.
 </p> <p>Auteurs (op alfabetische volgorde): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí
     Escobar, Joan Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex
     Richter-Boix, Isis Sanpera, Alex Tarragó, Marina Torres.</p> <p>In samenwerking met de AIM COST community (<a
