--- a/tigahelp/templates/tigahelp/license_pt.html
+++ b/tigahelp/templates/tigahelp/license_pt.html
@@ -19,7 +19,7 @@ Licença Mosquito Alert
     instituições: Centro de Estudos Avançados de Blanes do Conselho Superior de Pesquisa Científica (CEAB-CSIC), Centro
     de Pesquisas Ecológicas e Aplicações Florestais (CREAF), Universidade Pompeu Fabra (UPF) e o Instituto Catalão de
     Pesquisa e Estudos Avançados (ICREA).</p> <p>O código-fonte da Mosquito Alert está disponível no site do projeto em
-    <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p> <p>Autores (em ordem alfabética): Frederic
+    <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p> <p>Autores (em ordem alfabética): Frederic
     Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia Gironés,
     Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Àlex Richter-Boix, Isis Sanpere, Alex Tarragó,
     Marina Torres.</p> <p>Em colaboração com a comunidade AIM COST (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>)
