--- a/tigahelp/templates/tigahelp/license_sl.html
+++ b/tigahelp/templates/tigahelp/license_sl.html
@@ -19,7 +19,7 @@ Licenca Mosquito Alert
     Advanced Studies (CEAB-CSIC), Center for Ecological Research and Forest Applications (CREAF), Pompeu Fabra
     University (UPF) in Catalan Institute for Research and Advanced Studies (ICREA).</p>
 <p>Izvorna koda za aplikacijo Mosquito Alert je na voljo na spletnem mestu projekta na naslovu <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
 <p>Avtorji (po abecedi): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan
     Garriga, Misericòrdia Gironés, Živko Južnič-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boix,
     Isis Sanpera, Alex Tarragó, Marina Torres.</p>
