--- a/tigahelp/templates/tigahelp/license_sr.html
+++ b/tigahelp/templates/tigahelp/license_sr.html
@@ -15,7 +15,7 @@ Licenca
 <p>
     Aplikaciju Mosquito Alert razvile su sledeće institucije: Španski nacionalni istraživački centar Blanes za napredne studije (CEAB-CSIC), Centar za ekološka istraživanja i primene u šumarstvu (CREAF), Pompeu Fabra univerzitet (UPF) i Katalonski institut za istraživanja i napredne studije (ICREA).</p>
 <p>Izvor koda aplikacije
-    Mosquito Alert je dostupan na internet stranici projekta <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p> <p>Autori (poređanji po alfabetu): Frederic Bartumeus, Berj Dekramanjian, Roger
+    Mosquito Alert je dostupan na internet stranici projekta <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p> <p>Autori (poređanji po alfabetu): Frederic Bartumeus, Berj Dekramanjian, Roger
     Eritja, Santi Escartin, Agusti Escobar, Joan Garriga, Misericordia Girones, Živko Južnić-Zonta, Aitana Oltra, John
     R.B. Palmer, Ariadna Pena, Alex Richter-Boix, Isis Sanpera, Alex Tarrago, Marina Torres. </p> <p>U saradnji sa AIM
     COST zajednicom (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) i Globalnog Alarma za komarce (<a href="https://globarmosquitoalert.com/">https://globarmosquitoalert.com/</a>)</p> <p>
