--- a/tigahelp/templates/tigahelp/license_sv.html
+++ b/tigahelp/templates/tigahelp/license_sv.html
@@ -14,7 +14,7 @@ Mosquito Alert License
 <p>Mosquito Alert är ett system för medborgarforskning som möjliggör samarbete mellan olika aktörer att studera, övervaka och kontrollera stickmyggor som är vektorer
 för sjukdomar som dengue, Zika, chikungunya eller West Nile-feber. Mosquito Alert-appen (tidigare Tigatrapp) är en applikation för mobiltelefoner och surfplattor som låter vem som helst delta i Mosquito Alert.</p>
 <p>Mosquito Alert-appen har utvecklats av följande institutioner: det spanska nationella forskningsrådets Blanes Center for Advanced Studies (CEAB-CSIC), Center for Ecological Research and Forest Applications (CREAF), Pompeu Fabra University (UPF) och Catalan Institute för forskning och avancerade studier (ICREA).</p>
-<p>Källkoden för Mosquito Alert-appen finns tillgänglig på projektets webbplats på <a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a>.</p>
+<p>Källkoden för Mosquito Alert-appen finns tillgänglig på projektets webbplats på <a href="https://www.mosquitoalert.com">www.mosquitoalert.com</a>.</p>
 <p>Författare (i alfabetisk ordning): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boaix , Alex Tarragó, Marina Torres.</p>
 <p>I samarbete med AIM COST-konsortiet (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) och Global Mosquito Alert (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).</p>
 
