--- a/tigahelp/templates/tigahelp/license_tr.html
+++ b/tigahelp/templates/tigahelp/license_tr.html
@@ -20,7 +20,7 @@ Mosquito Alert Lisans
 </p>
 
 <p>
-    Mosquito Alert uygulamasının kaynak kodu, <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> adresindeki proje web sitesinde mevcuttur.
+    Mosquito Alert uygulamasının kaynak kodu, <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> adresindeki proje web sitesinde mevcuttur.
 </p>
 
 <p>
