--- a/tigahelp/templates/tigahelp/project_about_bn.html
+++ b/tigahelp/templates/tigahelp/project_about_bn.html
@@ -109,7 +109,7 @@
 
         <h2>আরো তথ্য জানতে করণীয়</h2>
         <p>আরো তথ্য জানতে প্রকল্পটির ওয়েবসাইট ও সামাজিক যোগাযোগ মাধ্যম অ্যাকাউন্টে চোখ রাখুন।</p>
-        <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
         <p>অ্যাপের সেটিংসে পাবেন পার্টিসিপেন্ট টিউটোরিয়াল, মশা সনাক্ত করতে সহায়ক নির্দেশিকা, গোপনীয়তা নীতিমালা ও
             ব্যবহারের শর্তাবলী এবং এই প্রকল্পের সাথে যুক্ত অংশীজনদের তথ্য।</p>
 
