--- a/tigahelp/templates/tigahelp/project_about_de.html
+++ b/tigahelp/templates/tigahelp/project_about_de.html
@@ -82,7 +82,7 @@
         </ul>
         <h2>Wo kann ich weitere Informationen finden?</h2>
         <p>Weitere Informationen findest du auf der Projektwebsite und in den sozialen Medien.</p>
-        <p><a href="http://www.mosquitoalert.com/en/">http://www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">https://www.mosquitoalert.com</a></p>
         <p>In den Einstellungen der App findet sich einTeilnehmer-Tutorial, eine Anleitung zur Identifizierung von
             Stechmücken, die Datenschutzrichtlinien und Nutzungsbedingungen sowie Informationen zu den Entitäten, die
             hinter diesem Projekt stehen.</p>
