--- a/tigahelp/templates/tigahelp/project_about_el.html
+++ b/tigahelp/templates/tigahelp/project_about_el.html
@@ -114,7 +114,7 @@
         </ul>
         <h2>Πού μπορείτε να βρείτε περισσότερες πληροφορίες;</h2>
         <p>Περισσότερες πληροφορίες θα βρείτε στον ιστότοπο και τα κοινωνικά μέσα του έργου: </p>
-        <p><a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
+        <p><a href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
         <p>Στις ρυθμίσεις της εφαρμογής θα βρείτε ένα εγχειρίδιο χρήσης που θα σας βοηθήσει να εντοπίσετε κουνούπια, την
             πολιτική απορρήτου καθώς και τους όρους χρήσης και πληροφορίες σχετικά με τους Φορείς που βρίσκονται πίσω
             από αυτό το έργο.</p>
