--- a/tigahelp/templates/tigahelp/project_about_es.html
+++ b/tigahelp/templates/tigahelp/project_about_es.html
@@ -109,7 +109,7 @@ Sobre El Proyecto
         </ul>
         <h2>¿Dónde puedo encontrar más información</h2>
         <p>Encontrarás más información en la página web del proyecto y en las redes sociales.</p>
-        <p><a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
         <p>IEn los ajustes de la app encontrarás el tutorial para participar, la guía de mosquitos para aprender a
             identificarlos, la política de privacidad y términos de uso e información sobre las entidades que impulsan
             el proyecto.</p>
