--- a/tigahelp/templates/tigahelp/project_about_fr.html
+++ b/tigahelp/templates/tigahelp/project_about_fr.html
@@ -112,7 +112,7 @@
                 </ul>
         <h2>Où puis-je trouver plus d'informations ?</h2> <p>Vous trouverez plus d'informations sur le site web du
                     projet et sur les réseaux sociaux.</p>
-                    <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+                    <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
                     <p>Dans les paramètres de l'application, vous trouverez un tutoriel pour les participants, un guide
                         pour vous aider à identifier les moustiques, la politique de confidentialité et les conditions
                         d'utilisation, et des informations sur les organismes à l'origine de ce projet.</p>
