--- a/tigahelp/templates/tigahelp/project_about_gl.html
+++ b/tigahelp/templates/tigahelp/project_about_gl.html
@@ -75,7 +75,7 @@ Sobre El Proyecto
         </ul>
         <h2>Onde podo atopar máis información</h2>
         <p>Atoparás máis información na páxina web do proxecto e nas redes sociais.</p>
-        <p><a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
         <p>En os axustes da app atoparás o titorial para participar, a guía de mosquitos para aprender a identificalos, a política de privacidade e termos de uso e información sobre as entidades que impulsan o proxecto.</p>
 
 
