--- a/tigahelp/templates/tigahelp/project_about_hr.html
+++ b/tigahelp/templates/tigahelp/project_about_hr.html
@@ -105,7 +105,7 @@ About The Project
 
         <h2>Gdje se može pronaći više informacija?</h2>
         <p>Više informacija možete pronaći na internet stranici projekta i društvenim mrežama.</p>
-        <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
         <p>U postavkama aplikacije pronaći ćete tutorial (uputstva) za sudionike, vodič koji će vam pomoći da
             determinirate komarce, zatim politiku privatnosti i uvjete korištenja, kao i informacije o sudionicima koji
             stoje iza projekta.</p>
