--- a/tigahelp/templates/tigahelp/project_about_mk.html
+++ b/tigahelp/templates/tigahelp/project_about_mk.html
@@ -107,7 +107,7 @@ About The Project
         </ul>
         <h2>Каде можам да најдам повеќе информации ?</h2>
         <p>Вие може да најдете повеќе информации на веб-страната на проектот и на социјалните мрежи.</p>
-        <p><a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
+        <p><a href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
         <p>Во апликацијата има поставки каде што ќе најдете туторијал за учесниците, клуч за детерминација на комарците,
             политика на приватност и условите на користење, и информации околу субјектите вклучени во овој проект.</p>
 
