--- a/tigahelp/templates/tigahelp/project_about_pt.html
+++ b/tigahelp/templates/tigahelp/project_about_pt.html
@@ -108,7 +108,7 @@ Sobre o projeto
 
         <h2>Onde posso encontrar mais informações?</h2>
         <p>Vai encontrar mais informações no site do projeto e nas redes sociais.</p>
-        <p><a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
+        <p><a href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
         <p>Nas configurações do aplicativo vai encontrar o tutorial para participar, o guia de mosquitos para saber como
             identificá-los, a política de privacidade e os termos de uso e informações sobre as entidades que promovem o
             projeto.</p>
