--- a/tigahelp/templates/tigahelp/project_about_ro.html
+++ b/tigahelp/templates/tigahelp/project_about_ro.html
@@ -75,7 +75,7 @@ Ce este Mosquito Alert?
         </ul>
         <h2>Unde pot găsi mai multe informații?</h2>
         <p>Veți găsi mai multe informații pe site-ul web al proiectului și pe social media.</p>
-        <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
         <p>În setările aplicației veți găsi un tutorial pentru participanți, un ghid pentru a vă ajuta să identificați țânțarii, politica de confidențialitate și condițiile de utilizare și informații despre entitățile din spatele acestui proiect.</p>
 
 
