--- a/tigahelp/templates/tigahelp/project_about_sl.html
+++ b/tigahelp/templates/tigahelp/project_about_sl.html
@@ -102,7 +102,7 @@ O projektu
         </ul>
         <h2>Kje najdem več informacij?</h2>
         <p>Več informacij boste našli na spletni strani projekta in v družabnih medijih.</p>
-        <p><a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
+        <p><a href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
         <p>V nastavitvah aplikacije boste našli navodila za udeležence, vodnik za lažje prepoznavanje komarjev, politiko
             zasebnosti in pogoje uporabe ter informacije o subjektih, ki stojijo za tem projektom.</p>
 
