--- a/tigahelp/templates/tigahelp/project_about_sq.html
+++ b/tigahelp/templates/tigahelp/project_about_sq.html
@@ -41,7 +41,7 @@
 
         <h2>Ku mund të gjejë më shumë informacione</h2>
         <p>Më shumë informacione do të gjeni në faqen e internetit të projektit dhe në rrjetet sociale.</p>
-        <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
         <p>Tek cilësimet e aplikacionit do të gjeni pjesën praktike për pjesëmarrësit, një udhëzues për të ndihmuar në përcaktimin e mushkonjave, politikat e privatësisë dhe termat e përdorimit, si edhe informacione mbi entitetet pas këtij projekti.</p>
     </div>
 </div>
