--- a/tigahelp/templates/tigahelp/project_about_sr.html
+++ b/tigahelp/templates/tigahelp/project_about_sr.html
@@ -106,7 +106,7 @@ About The Project
         </ul>
         <h2>Gde se može pronaći više informacija?</h2>
         <p>Više informacija možete pronaći na internet stranici projekta i društvenim medijima. </p>
-        <p><a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
+        <p><a href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a></p>
         <p>U podešavanjima aplikacije pronaći ćete tutorijal (uputstva) za učesnike, vodič koji će Vam pomoći da
             identifikujete komarce, zatim politiku privatnosti i uslove korišćenja, kao i informacije o entitetima koji
             stoje iza projekta. </p>
