--- a/tigahelp/templates/tigahelp/project_about_sv.html
+++ b/tigahelp/templates/tigahelp/project_about_sv.html
@@ -74,7 +74,7 @@ About The Project
         </ul>
         <h2>Var kan jag hitta mer information?</h2>
         <p>Du hittar mer information på projektets hemsida och i sociala medier.</p>
-        <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
         <p>inställningarna för appen hittar du en användarguide för deltagare, en guide som hjälper dig att identifiera stickmyggor, integritetspolicyn och användarvillkoren, samt information om enheterna bakom detta projekt.</p>
 
 
