--- a/tigacrafting/templates/tigacrafting/survey/survey_ca.html
+++ b/tigacrafting/templates/tigacrafting/survey/survey_ca.html
@@ -21,6 +21,6 @@
     <p style="color:red; font-size: 20px">Si tens problemes usant els enllaços de m&eacute;s amunt, copia i enganxa l'enlla&ccedil; seg&uuml;ent a un navegador:</p>
     <p style="color:red; font-size: 20px">{{ survey_link }}</p>
     <p>La enquesta forma part d'un estudi desenvolupat pel CEAB-CSIC i la UPF en el marc de Mosquito Alert</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="https://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
