--- a/tigacrafting/templates/tigacrafting/survey/survey_es.html
+++ b/tigacrafting/templates/tigacrafting/survey/survey_es.html
@@ -22,6 +22,6 @@
     <p style="color:red; font-size: 20px">Si tienes problemas para abrir los enlaces de m&aacute;s arriba, copia y pega el enlace siguiente en un navegador:</p>
     <p style="color:red; font-size: 20px">{{ survey_link }}</p>
     <p>La encuentra forma parte de un estudio desarrollado por el CEAB-CSIC y la UPF en el marco de Mosquito Alert.</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="https://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
