--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_en.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_en.html
@@ -22,6 +22,6 @@
     <p style="color:red; font-size: 20px">If you have trouble opening the former links, copy and paste the following url in a browser:</p>
     <p style="color:red; font-size: 20px">{{ survey_link }}</p>
     <p>The survey is part of a study developed by Mosquito Alert, CEAB-CSIC, and UPF.</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="https://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
