--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_it.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_it.html
@@ -22,6 +22,6 @@
     <p style="color:red; font-size: 20px">Se hai problemi ad aprire i link precedenti, copia e incolla il seguente URL in un browser:</p>
     <p style="color:red; font-size: 20px">{{ survey_link }}</p>
     <p>Il sondaggio fa parte di uno studio sviluppato da Mosquito Alert, CEAB-CSIC e UPF.</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="https://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
