--- a/tigacrafting/templates/tigacrafting/survey_2023/survey_nl.html
+++ b/tigacrafting/templates/tigacrafting/survey_2023/survey_nl.html
@@ -23,6 +23,6 @@
     <p style="color:red; font-size: 20px">Als je problemen hebt met het openen van de eerdere links, kopieer en plak dan de volgende url in een browser:</p>
     <p style="color:red; font-size: 20px">{{ survey_link }}</p>
     <p>Het onderzoek maakt deel uit van een onderzoek dat is ontwikkeld door Mosquito Alert, CEAB-CSIC en UPF.</p>
-    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="http://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
+    <p class="centeredImage"><img style="max-width: 100%; height: auto; display: block; margin-left: auto; margin-right: auto;" src="https://www.mosquitoalert.com/wp-content/uploads/2022/06/ceab-upf.png"></p>
 </body>
 </html>
