--- a/tigahelp/templates/tigahelp/about_us_el.html
+++ b/tigahelp/templates/tigahelp/about_us_el.html
@@ -16,7 +16,7 @@
 <h2>Χρηματοδότηση και συμμετοχή σε έργα</h2>
 <p>Το Mosquito Alert συμμετέχει σε ανταγωνιστικά ερευνητικά έργα, στη διάδοση της επικοινωνίας της επιστήμης (συμπεριλαμβανομένου του ισπανικού <em> Plan Estal</em>, της Ευρωπαϊκής χρηματοδότησης από τον «Ορίζοντα 2020», και των σχεδίων «la Caixa»). Το Mosquito Alert βασίζεται επίσης σε συνεισφορές πόρων τόσο από τους Συντονιστές όσο και από τους Συνεργαζόμενους Φορείς.</p>
 <p>Περισσότερες πληροφορίες για τους Συντονιστές, τους Συνεργαζόμενους Φορείς και έργα μπορείτε να βρείτε στη διεύθυνση
-    <a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a> καθώς και στα κοινωνικά δίκτυα.</p>
+    <a href="https://www.mosquitoalert.com/en/"> www.mosquitoalert.com </a> καθώς και στα κοινωνικά δίκτυα.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
