--- a/tigahelp/templates/tigahelp/about_us_ro.html
+++ b/tigahelp/templates/tigahelp/about_us_ro.html
@@ -17,7 +17,7 @@ About Us
 <p>Mosquito Alert este posibilă și datorită participării unui număr de experți (profesioniști care, de exemplu, validează datele științificului cetățean) și a entităților din diferite țări care lucrează în domeniul sănătății publice, al controlului speciilor invazive și al educației de mediu.</p>
 <h2>Finanțarea și participarea la proiecte</h2>
 <p>Mosquito Alert participă la proiecte competitive pentru cercetare, diseminare a comunicării științifice (inclusiv <em>Planul Estral </em>din Spania, linia de finanțare UE Orizont 2020 și proiectele Fundației „la Caixa”, printre altele). Mosquito Alert se bazează, de asemenea, pe contribuțiile de resurse de la entitățile de conducere și colaboratoare. Mai multe informații despre entități, colaborări și proiecte pot fi găsite pe <a
-        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> și pe rețelele de socializare.</p>
+        href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a> și pe rețelele de socializare.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
