--- a/tigahelp/templates/tigahelp/license_en.html
+++ b/tigahelp/templates/tigahelp/license_en.html
@@ -18,7 +18,7 @@ Mosquito Alert License
     Spanish National Research Council’s Blanes Center for Advanced Studies (CEAB-CSIC), the Center for Ecological
     Research and Forest Applications (CREAF), Pompeu Fabra University (UPF) and the Catalan Institute for Research and
     Advanced Studies (ICREA). </p> <p> The source code for the Mosquito Alert app is available on the project website at
-    <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>. </p> <p> Authors (in alphabetical order):
+    <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>. </p> <p> Authors (in alphabetical order):
     Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia
     Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boix, Isis Sanpera, Alex
     Tarragó, Marina Torres. </p> <p> In collaboration with the AIM COST community (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>)
