--- a/tigahelp/templates/tigahelp/license_ro.html
+++ b/tigahelp/templates/tigahelp/license_ro.html
@@ -13,7 +13,7 @@ Mosquito Alert License
 
 <p>Mosquito Alert este un sistem citizen science care permite colaborarea diferiților actori în studiu, monitorizarea și controlul țânțarilor care sunt vectori ai bolilor precum dengue, Zika, chikungunya sau febra Nilului de Vest. Aplicația Mosquito Alert (fostă Tigatrapp) este o aplicație pentru telefoane mobile și tablete care permite oricui să participe la Mosquito Alert.</p>
 <p>Aplicația Mosquito Alert a fost dezvoltată de următoarele instituții: Centrul Blanes pentru Studii Avansate al Consiliului Național de Cercetare Spaniol (CEAB-CSIC), Universitatea Pompeu Fabra (UPF) și Institutul Catalan pentru Cercetare și Studii Avansate (ICREA).</p>
-<p>Codul sursă pentru aplicația Mosquito Alert este disponibil pe site-ul web al proiectului la <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
+<p>Codul sursă pentru aplicația Mosquito Alert este disponibil pe site-ul web al proiectului la <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
 <p>Autori (în ordine alfabetică): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericórdia Gironés, Zviko Juznic-Zonta, Aitana Oltra, John RB Palmer, Ariadna Peña, Alex Richter-Boix, Isis Sanpera , Alex Tarragó, Marina Torres.</p>
 <p>În colaborare cu comunitatea AIM COST (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) și Global Mosquito Alert (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).</p>
 <p>Imagini de țânțari în Ghidul de țânțari al aplicației de către Roger Eritja, toate drepturile rezervate.</p>
