--- a/tigahelp/templates/tigahelp/license_sq.html
+++ b/tigahelp/templates/tigahelp/license_sq.html
@@ -15,7 +15,7 @@
 
 <p>Aplikacioni "Mosquito Alert" është zhvilluar nga këto institucione: Qendra Kërkimore Këshillimore Kombëtare Spanjolle për Studime të Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime të Aplikuara Ekologjike dhe Pyjore (CREAF), Universiteti Pompeu Fabra (UPF) dhe Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA).</p>
 
-<p>Burimi i kodit për Aplikacioni "Mosquito Alert" është i disponueshëm në faqen e internetit të projektit <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
+<p>Burimi i kodit për Aplikacioni "Mosquito Alert" është i disponueshëm në faqen e internetit të projektit <a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p>
 
 <p>Autorët (në rend alfabetik): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agusti Escobar, Joan Garriga, Misericordia Girones, Zivko Juznic- Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Pena, Alex Richter-Boix, Isis Sanpera, Alex Tarrago, Marina Torres.</p>
 
