--- a/tigahelp/templates/tigahelp/project_about_bg.html
+++ b/tigahelp/templates/tigahelp/project_about_bg.html
@@ -107,7 +107,7 @@ About The Project
         </ul>
         <h2>Къде мога да намеря повече информация?</h2>
         <p>Ще откриете повече информация на уебсайта на проекта и в социалните медии.</p>
-        <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
         <p>В настройките на приложението ще намерите самоучител, ръководство в помощ на определянето на комари,
             политиката за поверителност и условията за ползване, както и информация за субектите, стоящи зад този
             проект.</p>
