--- a/tigahelp/templates/tigahelp/project_about_nl.html
+++ b/tigahelp/templates/tigahelp/project_about_nl.html
@@ -113,7 +113,7 @@ About The Project
 
         <h2>Waar kan ik meer informatie vinden?</h2>
         <p>U kunt meer informatie vinden op de website en op sociale media.</p>
-        <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
         <p>In de instellingen van de applicatie vind u: een deelnemers handleiding, een gids om u te helpen steekmuggen
             te identificeren, het privacybeleid, de gebruiksvoorwaarden en informatie over de entiteiten achter dit
             project.</p>
