--- a/tigahelp/templates/tigahelp/project_about_tr.html
+++ b/tigahelp/templates/tigahelp/project_about_tr.html
@@ -106,7 +106,7 @@ About The Project
         </ul>
         <h2>Daha fazla bilgiyi nerede bulabilirim?</h2>
         <p>Proje web sitesinde ve sosyal medyada daha fazla bilgi bulabilirsiniz.</p>
-        <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
+        <p><a href="https://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
         <p>Uygulamanın ayarlarında bir katılımcı eğitimi, sivrisinekleri belirlemenize yardımcı olacak bir rehber,
             gizlilik politikası, kullanım koşulları ve bu projenin arkasındaki tüzel kişiler hakkında bilgiler
             bulacaksınız.</p>
